# machine-learning

./: .gitignore  README.md  data_processing.ipynb  hello.py  no4_reinforce.ipynb  no4_reinforce.pth  pyproject.toml  result.csv  result_nobalance.csv  test.ipynb
drl/: template.ipynb  template_no2.ipynb
drl/a2c/: a2c_no2.pth  no1.ipynb  no3.ipynb  no4_a2c.ipynb  no5.py
drl/binary/a2c/: a2c_10000.pth  a2c_no2.pth  no2.ipynb  no3.ipynb  no4_a2c.ipynb  no5.py  test_result.csv  tutorial.ipynb  tutorial.py
drl/binary/d3qn/: d3qn_no4.pth  d3qn_re_no4.pth  no1.ipynb  no2_d3qn.ipynb  no3_d3qn.ipynb  no4_d3qn.ipynb  (+1 more)
drl/d3qn/: d3qn_no2.pth  d3qn_no3.pth  d3qn_no4.pth  no1.ipynb  no2_d3qn.ipynb  no3_d3qn.ipynb  no4_d3qn.ipynb
drl/ddqn/: ddqn.pth  ddqn_no3.pth  ddqn_no3_done.pth  no1.ipynb  no2.ipynb  no3_ddqn.ipynb
drl/dqn/: dqn.pth  dqn_1000.pth  dqn_10000.pth  dqn_100000.pth  dqn_no2.pth  dqn_no2_10000.pth  dqn_no2_20000.pth  dqn_no2_done.pth  no1.ipynb  no2.ipynb  no2_dqn.ipynb  tutorial.ipynb
drl/multiclass/: ddqn_no3.pth  multi-ddqn.pth
drl/ppo/: no1.ipynb  no2_ppo.ipynb  no3_ppo.ipynb  no4_ppo.ipynb  ppo_no3.pth
drl/reinforce/: loop.py  metrics_1.csv  metrics_256.csv  metrics_8.csv  no1.ipynb  no2_reinforce.ipynb  no3_reinforce.ipynb  no4_reinforce.ipynb  no4_reinforce.pth  reinforce.pth  reinforce_no2.pth  result.csv  tutorial.ipynb
flowdata/: __init__.py  pyproject.toml  setup.py
flowdata/src/: flow_data.py
flowenv/: __init__.py  hello.py  pyproject.toml  setup.py
flowenv/src/: const.py  flow.py  flow_test.py  flow_train.py  multi_flow.py
(+75 files in other folders)
