[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flowdata",
    "flowenv",
    "gymnasium>=1.0.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "torch>=2.5.1",
]

[tool.uv.workspace]
members = ["flowenv", "flowdata"]

[tool.uv.sources]
flowdata = { workspace = true }
flowenv = { workspace = true }

